--- a/package.json
+++ b/package.json
@@ -18,9 +18,15 @@
   "homepage": "https://github.com/SidneyBasa/express-session_lab#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
+    "connect-session-sequelize": "^7.1.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-handlebars": "^6.0.7",
+    "express-session": "^1.17.3",
+    "handlebars": "^4.7.7",
     "mysql2": "^3.1.2",
+    "nodemailer": "^6.9.1",
     "sequelize": "^6.28.0"
   }
 }
